--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/Mont-Regular.otf" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/Mont-Semibold.otf" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/Mont-Bold.otf" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
