--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.svg" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/Mont-Regular.otf" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/Mont-Semibold.otf" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/Mont-Bold.otf" />
